# ElGamal

./: Cargo.toml  README.md
.github/workflows/: dusk_ci.yaml
src/: error.rs  lib.rs
tests/: test_scheme.rs
