[package]
name = "elgamal"
version = "0.1.0"
authors = ["Luke Pearson <luke@dusk.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poseidon252 = { git = "https://github.com/dusk-network/Poseidon252" , tag = "v0.14.0"}
dusk-plonk = "0.3.5"
rand = "0.7.0"
thiserror = "1.0"

[build-dependencies]
dusk-plonk = "0.3.5"

[dependencies.subtle]
version = "^2.2.1"
default-features = false

[dev-dependencies.rand_core]
version = "0.5"
default-features = false

[dev-dependencies.rand_xorshift]
version = "0.2"
default-features = false
